# marketo-for-win

./: .gitmodules  CMakeLists.txt  README.md  README.txt
breeze-dl/: CMakeLists.txt
deploy/: CMakeLists.txt  qt.conf
icon-rcc/: CMakeLists.txt  SymlinksToFilesWin.bat  main.cpp
installer/: CMakeLists.txt  kate-installer-debug.nsi  kate-installer-release.nsi  marketo-installer-release.nsi
patches/: 001-kio-workaround-leading-slash-on-toDisplayString.diff  001-sonet-search-hunspell-dicts.diff  002-fix-kcoreaddons_desktop_to_json.diff  002-sonnet-search-hunspell-dicts.diff  Phonon4Qt5_4.7.2_fix_win_build.diff  gettext-0.18-20150423.diff  hunspell_add_cmakelists.diff  kf5configwidgets-disable-docktool-auth.diff  kf5init-disable-docktools-fix-compilation.diff  kf5kio-disable-doctools-solid-trash-help.diff  kf5kio-fix-windows-build.diff  kf5service-disable-dockbook-syscoca-crash.diff  kf5xmlgui-5.12.0-fix-win-build.diff  kiconthemes_add_coreaddons_dep.diff  shared-mime-info-1.0.diff
